# dwarf-to-source-map

./: Cargo.toml  README.md
src/: main.rs  models.rs  services.rs  utils.rs
src/models/: dwarf.rs  entry.rs  prefix.rs  source_map.rs  wasm.rs
src/services/: append_source_mapping.rs  build_source_map.rs  get_code_section.rs  parse_dwarf_to_entries.rs  strip_debug_sections.rs
src/utils/: normalize_path.rs  regex.rs
