[package]
name = "map-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
regex = "1.10.2"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }